# logmos

./: CMakeLists.txt
include/: CMakeLists.txt
include/logmos/: color.h  logger.h
src/: CMakeLists.txt  logger.cc
test/: CMakeLists.txt  test_main.cc
